fix: readme.md cara menjalankan